<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivityCadastroUsuario">

    <RelativeLayout
        android:id="@+id/cadastroUsuarioLayout"
        android:layout_width="335dp"
        android:layout_height="480dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="99dp"
            android:text="@string/nome"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextEmail"
            android:layout_below="@+id/imageView"
            android:layout_marginStart="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/textView9"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextEmail"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextIdade"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="73dp"
            android:layout_toEndOf="@+id/textView10"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="58dp"
            android:layout_height="27dp"
            android:layout_above="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="42dp"
            android:text="@string/sexo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextSenha"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="33dp"
            android:layout_toEndOf="@+id/textView12"
            android:ems="10"
            android:inputType="number|numberSigned" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView14"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="51dp"
            android:text="@string/idade"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="64dp"
            android:layout_height="28dp"
            android:layout_alignEnd="@+id/textView11"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="-6dp"
            android:layout_marginBottom="111dp"
            android:text="@string/senha"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonTelaCadastroCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="113dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cadastrar" />

        <Spinner
            android:id="@+id/spinnerSexo"
            android:layout_width="217dp"
            android:layout_height="39dp"
            android:layout_above="@+id/editTextIdade"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="21dp"
            android:layout_toEndOf="@+id/textView11" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="76dp"
            android:layout_height="67dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="147dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="112dp"
            app:srcCompat="@drawable/criar_conta" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonTelaCadastroCadastrar"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="31dp"
            android:layout_toEndOf="@+id/textView14"
            android:ems="10"
            android:inputType="textPassword" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>