<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivityTelaPrincipal">

    <RelativeLayout
        android:id="@+id/telaPrincipalLayout"
        android:layout_width="325dp"
        android:layout_height="456dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428">

        <ImageButton
            android:id="@+id/buttonTelaPrincipalCatalogar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="64dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="14dp"
            android:layout_toStartOf="@+id/buttonTelaPrincipalStatus"
            app:srcCompat="@drawable/catalogar" />

        <ImageButton
            android:id="@+id/buttonTelaPrincipalStatus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_above="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="67dp"
            android:layout_marginBottom="13dp"
            app:srcCompat="@drawable/status" />

        <ImageButton
            android:id="@+id/buttonTelaPrincipalCatalogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_above="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginStart="66dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/buttonTelaPrincipalConta"
            app:srcCompat="@drawable/imagens" />

        <ImageButton
            android:id="@+id/buttonTelaPrincipalConta"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="155dp"
            app:srcCompat="@drawable/editar_conta" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonTelaPrincipalCatalogo"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="76dp"
            android:layout_marginTop="182dp"
            android:layout_marginBottom="8dp"
            android:text="@string/catalogar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="88dp"
            android:text="@string/status" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="87dp"
            android:layout_marginBottom="131dp"
            android:text="@string/catalogo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="93dp"
            android:layout_marginBottom="127dp"
            android:text="@string/conta" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>