<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivityCadastroCatalogo">

    <RelativeLayout
        android:id="@+id/catalogarLayout"
        android:layout_width="307dp"
        android:layout_height="457dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="214dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="53dp"
            android:contentDescription="@string/animal"
            app:srcCompat="@drawable/animal" />

        <ImageView
            android:id="@+id/uploadImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imageView5"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="50dp"
            android:layout_toEndOf="@+id/buttonEscolherFoto" />

        <RadioGroup
            android:id="@+id/radioGroupTipo"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radioButtonAnimal"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/animal" />

            <RadioButton
                android:id="@+id/radioButtonVegetal"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/vegetal" />

        </RadioGroup>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="213dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="54dp"
            android:contentDescription="@string/vegetal"
            app:srcCompat="@drawable/vegetal" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextNomeCat"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="133dp"
            android:layout_marginTop="198dp"
            android:layout_marginBottom="10dp"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/editTextNomeCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="9dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextObsCat"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp"
            android:text="@string/obs" />

        <EditText
            android:id="@+id/editTextObsCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editTextNomeCat"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginBottom="92dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:selectAllOnFocus="false"
            android:singleLine="false" />

        <ImageButton
            android:id="@+id/buttonEscolherFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroupTipo"
            android:layout_alignParentStart="true"
            android:layout_marginStart="126dp"
            android:layout_marginTop="19dp"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/buttonTelaCatalogarCadastrar"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="89dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cadastrar" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>